# spine

./: .gitignore  131f2f1e.md  AGENTS.md  ANALYSIS_REPORT.md  DESIGN.md  DEVELOPMENT_STORY.md  FEATURE_LIST.MD  OVERVIEW.md  PERSISTENCE.md  PROVIDERS.md  README.md  SPINE_CODEBASE_ANALYSIS_REPORT.md  STATEMACHINE.md  SWARM_DECOMPOSITION.md  WORKFLOW_REBUILD.md  _check_async.py  alembic.ini  d6834ce4.md  debug_test.py  featcontextdisciplineupgrade.bundle  fix_interpreter.py  implement.json  langgraph.json  onboarding prompt.txt  opencode.json  openrouter_activity_2026-05-18.csv  parse_prompts.py  parse_trace.py  patch_interpreter.py  plan_prompt_analysis_report.md  pyproject.toml  smallcodeimplementrefactor.bundle  spine-gate.yaml  spine-implement.json  spine-tasks.json  spine-verify.json  tasks.json  test_dashboard.py  test_stream_format.py  trace_audit.py  (+1 more)
.hermes/: wf-git-lifecycle.js
.hermes/plans/: 2026-05-15-rebound-loop-self-correction.md  2026-05-15_164500-prompt-efficiency-rlm-IMPLEMENTATION.md  2026-05-15_164500-prompt-efficiency-rlm.md  2026-05-16_205300-spine-subgraph-decomposition.md  2026-05-18-trace-fixes.md  2026-05-19-context-engineering-roadmap.md  2026-05-19-specify-plan-trace-analysis-prompt.md  2026-05-19-tasks-implement-verify-trace-analysis-prompt.md  2026-05-19-trace-019e43ea-tasks-implement-verify-assessment.md  2026-05-19-trace-15a4c971-specify-plan-assessment.md  2026-05-19-trace-57f3f8eb-tasks-implement-verify-assessment.md  2026-05-19-trace-79bc301c-improvements.md  agent-providers.md  (+9 more)
.hive/: HANDOFF.md  IMPLEMENTATION_MATRIX.md  issues.jsonl  memories.jsonl
.spine/: config.reference.yaml  config.yaml  spine.db-shm  spine.db-wal
alembic/: env.py
backend/: __init__.py  main.py
conversation_history/: 4b7b446f.md  898e7b64.md  b1b4f26b.md
docs/: CRITICAL_FUNCTIONS_FEATURES.md  HYBRID_ARCHITECTURE.md  PROMPT_IMPROVEMENT_PLAN.md  UI_IMPLEMENTATION_PLAN.md  UI_RESEARCH.md  codebase-memory-mcp-migration-plan.md  combined_implementation_plan.md  gap_plan_structured_data.md  implement_orch_prompt_plan.md  implement_orch_sys_prompt.md  implementation_audit.md  memory-organ-integration-plan.md  plan_synth_analysis.md  plan_synth_optimization_report.md  plan_synth_sys_prompt.md  redundancy_analysis.md  specify_prompt_analysis.md  specify_prompt_optimization_plan.md  specify_synth_sys_prompt.md  state_invariants.md  structured_data_flow_architecture.md  verify_orch_analysis.md  verify_orch_sys_prompt.md  verify_prompt_analysis_report.md
scratch/: test_explore_flash.py
spine/: PLAN.md  __init__.py  __main__.py  cli.py  config.py  exceptions.py  log.py  observability.py
tests/: __init__.py  conftest.py  test_agent_providers.py  test_audit_api.py  test_audit_service.py  test_backend_api.py  test_cli_providers.py  test_core.py  test_debug_and_critic_fix.py  test_discovery.py  test_execute_dag.py  test_feature_slices.py  test_gates.py  test_git_worktree.py  test_github_issues.py  test_hello_cli.py  test_hierarchy.py  test_hivemind.py  test_init_safeguard.py  test_learning.py  test_llm_providers.py  test_mail.py  test_persistence.py  test_plan_score.py  test_prompts.py  test_providers_base.py  test_reservations_guard.py  test_restart.py  test_state_machine.py  test_streaming.py  test_supervisor.py  test_swarm_learning.py  test_thread_context.py  test_thread_model.py  test_time_conversion.py  test_work_entry.py  test_work_ordering.py  test_workflow_engine.py
(+689 files in other folders)
