[project]
name = "spine-harness"
version = "0.1.0"
description = "Deterministic AI agent harness with state machine workflow engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SPINE Contributors"}
]

dependencies = [
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-supervisor>=0.0.13",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "sqlite-utils>=3.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
spine = "spine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
target-version = ["py311"]
line-length = 100