[project]
name = "spine-harness"
version = "0.1.0"
description = "Deterministic AI agent harness with state machine workflow engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SPINE Contributors"}
]

dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.2.3",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-supervisor>=0.0.13",
    "deepagents[quickjs]>=0.5.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "sqlite-utils>=3.36",
    "streamlit>=1.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "langchain-quickjs>=0.1.0",
    "websockets>=13.0",
    "python-dotenv>=1.2.2",
    "mcp>=1.0.0",
    "mcp-codebase-index>=0.1.1",
    "langchain-mcp-adapters>=0.2.2",
]

[project.scripts]
spine = "spine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spine"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
target-version = ["py311"]
line-length = 100
